--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,21 @@
 {
+  "root": true,
+  "env": { "browser": true, "es2020": true },
   "extends": [
-    "standard",
+    "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:tailwindcss/recommended",
-    "prettier"
+    "plugin:react/jsx-runtime",
+    "plugin:react-hooks/recommended"
   ],
-  "plugins": ["@react-three"],
+  "ignorePatterns": ["dist", ".eslintrc.cjs"],
+  "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
+  "settings": { "react": { "version": "18.2" } },
+  "plugins": ["react-refresh"],
   "rules": {
-    "max-len": [2, 250],
-    "no-multiple-empty-lines": [
-      "error",
-      {
-        "max": 1,
-        "maxEOF": 1
-      }
-    ],
-    "object-curly-newline": 0
+    "react/jsx-no-target-blank": "off",
+    "react-refresh/only-export-components": [
+      "warn",
+      { "allowConstantExport": true }
+    ]
   }
 }
