--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
+    "@sentry/react": "^8.2.1",
+    "@sentry/vite-plugin": "^2.16.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.15.2",
